--- a/pixi-test/index.html
+++ b/pixi-test/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <script src="https://cdn.jsdelivr.net/gh/F00seball/repo@version/index.html"></script>
+    <script src="https://cdn.jsdelivr.net/gh/F00seball/bully_game@main/dist/index.html"></script>
   </head>
   <body>
     <script type="module">
