--- a/pixi-test/index.html
+++ b/pixi-test/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <script src="https://cdn.jsdelivr.net/gh/F00seball/bully_game@main/pixi-test/index.html"></script>
+    // <script src="https://cdn.jsdelivr.net/gh/F00seball/bully_game@main/pixi-test/index.html"></script>
+    <script src="https://cdn.jsdelivr.net/npm/pixi.js@7.x/dist/pixi.min.js"></script>
   </head>
   <body>
     <script type="module">
