--- a/pixi-test/index.html
+++ b/pixi-test/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <script src="https://pixijs.download/release/pixi.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/F00seball/buly_game@main/dist/index.js"></script>
   </head>
   <body>
     <script type="module">
